@@ -40,6 +40,9 @@ Serving of Django HTTPS applications (whether using sync or async views) under A
 
   Note the ``runworker`` command remains a part of the ``channels`` app.
 
+* Removed the ``consumer_started`` and consumer_finished`` signals, unused since the 2.0 rewrite.
+
+
 3.0.5 (2022-06-24)
 ------------------
 
